# ComputerVisionLab6

./: CMakeLists.txt
src/: lab6.cpp
